# bigdata

./: pyproject.toml
api_demo/: config_template.yaml  flask_01_simple_app.py  flask_02_crud_app.py  flask_03_basic_auth_app.py  flask_04_jwt_auth_app.py  flask_06_db_config.py  flask_06_mysql_app.py  flask_07_idempotency_demo.py
tests/: test_01.py  test_02.py  test_03.py  test_04.py
