[project]
name = "python-flask-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-httpauth>=4.8.0",
    "flask-jwt-extended>=4.7.1",
    "flask-restful>=0.3.10",
    "flask-restx>=1.3.2",
    "pyarrow>=21.0.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.3",
]